--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/planoatendimentofamiliar/plano-atendimento-familiar-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/planoatendimentofamiliar/plano-atendimento-familiar-list.html
@@ -21,11 +21,11 @@
 						<div layout="row">
 							<md-input-container style="margin-bottom: 20px;" layout="column" flex>
 								<label>Digite sua pesquisa</label>
-								<input type="text" name="filtro" ng-disabled="moreFilters" ng-model="model.familia.filters.terms" maxlength="255">
+								<input type="text" name="filtro" ng-disabled="moreFilters" ng-model="model.planoAtendimentoFamiliar.filters.terms" maxlength="255">
 							</md-input-container>
 					            
 				            <div layout="row" layout-align="end center" ng-init="currentOption = 'down'">
-					            <md-button class="md-raised md-primary md-hue-2" ng-click="!moreFilters ? listFamiliasByFilters() : listFamiliasByMoreFilters()">Filtrar</md-button>
+					            <md-button class="md-raised md-primary md-hue-2" ng-click="!moreFilters ? listByFilters() : listByMoreFilters()">Filtrar</md-button>
 					            <md-button class="md-raised md-primary md-hue-3" ng-click="openMaisOpcoes(); currentOption = !currentOption" style="padding-left: 14px;">
 					            	Mais opções
 					            	<i ng-if="!currentOption" style="font-size: 22px;margin: 0 10px 5px 13px;" class="zmdi zmdi-chevron-down"></i>
@@ -36,12 +36,8 @@
 				    	
 				    	<div class="more-filters" layout="column" ng-if="moreFilters">
 							<div layout="row" style="color:black">
-								<md-checkbox ng-model="model.familia.filters.ativo" aria-label="Checkbox 1">
+								<md-checkbox ng-model="model.planoAtendimentoFamiliar.filters.ativo" aria-label="Checkbox 1">
 									Mostrar ativos
-						        </md-checkbox>
-					    		
-					    		<md-checkbox ng-model="model.familia.filters.inativo" aria-label="Checkbox 1">
-									Mostrar inativos
 						        </md-checkbox>
 							</div>				    									
 				    	</div>
@@ -58,35 +54,35 @@
 					  <table md-table md-row-select multiple ng-model="selected" md-progress="promise">
 					    <thead md-head md-order="query.order" md-on-reorder="getDesserts">
 					      <tr md-row>
-					        <th md-column md-order-by="nameToLower"><span>Nome</span></th>
-					        <th md-column md-numeric md-order-by="calories.value"><span>Nome da Mãe</span></th>
-					        <th md-column md-numeric>Endereço</th>
-					        <th md-column md-numeric>Telefone</th>
+					        <th md-column md-order-by="nameToLower"><span>Número</span></th>
+					        <th md-column md-numeric md-order-by="calories.value"><span>Família</span></th>
+					        <th md-column md-numeric>Nome da mãe</th>
+					        <th md-column md-numeric>Status</th>
 					      </tr>
 					    </thead>
 					    <tbody md-body>
-					      <tr md-row md-select="dessert" style="cursor:pointer" ng-click="$state.go( FAMILIA_EDIT_STATE, {id:familia.id} )" md-select-id="name" md-auto-select ng-repeat="familia in model.familia.page.content">
-					        <td md-cell>{{::familia.nome}}</td>
-					        <td md-cell>{{::familia.nomeMae}}</td>
-					        <td md-cell>{{::familia.endereco.rua}}</td>
-					        <td md-cell>{{::familia.telefone}}</td>
+					      <tr md-row md-select="dessert" style="cursor:pointer" ng-click="$state.go( FAMILIA_EDIT_STATE, {id:familia.id} )" md-select-id="name" md-auto-select ng-repeat="planoAtendimentoFamiliar in model.planoAtendimentoFamiliar.page.content">
+					        <td md-cell>{{::planoAtendimentoFamiliar.id}}</td>
+					        <td md-cell>{{::planoAtendimentoFamiliar.familia.nome}}</td>
+					        <td md-cell>{{::planoAtendimentoFamiliar.familia.nomeMae}}</td>
+					        <td md-cell>{{::planoAtendimentoFamiliar.status | translate}}</td>
 					      </tr>
 					    </tbody>
 					  </table>
 					</md-table-container>
 										
-					<div layout="column" flex class="empty-grid" layout-align="center center" ng-show="model.familia.page.content.length == 0">
-						Nenhum registro de família encontrado
+					<div layout="column" flex class="empty-grid" layout-align="center center" ng-show="model.planoAtendimentoFamiliar.page.content.length == 0">
+						Nenhum registro de plano de atendimento familiar encontrado
 					</div>
 					
 					<md-divider></md-divider>
-					<div class="default-paginator" layout layout-align="end center" ng-if="model.familia.page.content.length > 0">
-						{{ model.familia.page.pageable.page + 1 }} de {{ totalPagesFamilia }}
-						<md-button class="md-icon-button" ng-disabled="(model.familia.page.pageable.page + 1) < 2" ng-click="onFamiliaPaginationChange(false)">
-							<i style="font-size: 20px;" class="zmdi zmdi-chevron-left" ng-style="(model.familia.page.pageable.page + 1) < 2 && {'color': '#BEBEBE'} || ''"></i>
+					<div class="default-paginator" layout layout-align="end center" ng-if="model.planoAtendimentoFamiliar.page.content.length > 0">
+						{{ model.planoAtendimentoFamiliar.page.pageable.page + 1 }} de {{ totalPagesFamilia }}
+						<md-button class="md-icon-button" ng-disabled="(model.planoAtendimentoFamiliar.page.pageable.page + 1) < 2" ng-click="onFamiliaPaginationChange(false)">
+							<i style="font-size: 20px;" class="zmdi zmdi-chevron-left" ng-style="(model.planoAtendimentoFamiliar.page.pageable.page + 1) < 2 && {'color': '#BEBEBE'} || ''"></i>
 						</md-button>
-						<md-button class="md-icon-button" ng-disabled="(model.familia.page.pageable.page + 1) >= totalPagesFamilia" ng-click="onFamiliaPaginationChange(true)">
-							<i style="font-size: 20px;" class="zmdi zmdi-chevron-right" ng-style="(model.familia.page.pageable.page + 1) >= Math.ceil(model.familia.page.total/model.familia.page.pageable.size) && {'color': '#BEBEBE'} || ''"></i>
+						<md-button class="md-icon-button" ng-disabled="(model.planoAtendimentoFamiliar.page.pageable.page + 1) >= totalPagesFamilia" ng-click="onFamiliaPaginationChange(true)">
+							<i style="font-size: 20px;" class="zmdi zmdi-chevron-right" ng-style="(model.planoAtendimentoFamiliar.page.pageable.page + 1) >= Math.ceil(model.planoAtendimentoFamiliar.page.total/model.planoAtendimentoFamiliar.page.pageable.size) && {'color': '#BEBEBE'} || ''"></i>
 						</md-button>
 			  		</div>
 			  		
