--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/planoatendimentofamiliar/plano-atendimento-familiar-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/planoatendimentofamiliar/plano-atendimento-familiar-list.html
@@ -10,7 +10,7 @@
 	    	</div>
 	    	
 	        <div md-theme="default" layout="row" layout-align="end center" class="default-header">
-		        <md-button class="md-raised md-accent default-save-button" ng-click="$state.go( FAMILIA_ADD_STATE )">Novo</md-button>
+		        <md-button class="md-raised md-accent default-save-button" ng-click="$state.go( PLANO_ATENDIMENTO_FAMILIAR_ADD_STATE )">Novo</md-button>
 	        </div>
 	    </md-toolbar>
 	
@@ -61,7 +61,7 @@
 					      </tr>
 					    </thead>
 					    <tbody md-body>
-					      <tr md-row md-select="dessert" style="cursor:pointer" ng-click="$state.go( FAMILIA_EDIT_STATE, {id:familia.id} )" md-select-id="name" md-auto-select ng-repeat="planoAtendimentoFamiliar in model.planoAtendimentoFamiliar.page.content">
+					      <tr md-row md-select="dessert" style="cursor:pointer" ng-click="$state.go( PLANO_ATENDIMENTO_FAMILIAR_EDIT_STATE, {id:planoAtendimentoFamiliar.id} )" md-select-id="name" md-auto-select ng-repeat="planoAtendimentoFamiliar in model.planoAtendimentoFamiliar.page.content">
 					        <td md-cell>{{::planoAtendimentoFamiliar.id}}</td>
 					        <td md-cell>{{::planoAtendimentoFamiliar.familia.nome}}</td>
 					        <td md-cell>{{::planoAtendimentoFamiliar.familia.nomeMae}}</td>
@@ -77,7 +77,7 @@
 					
 					<md-divider></md-divider>
 					<div class="default-paginator" layout layout-align="end center" ng-if="model.planoAtendimentoFamiliar.page.content.length > 0">
-						{{ model.planoAtendimentoFamiliar.page.pageable.page + 1 }} de {{ totalPagesFamilia }}
+						{{ model.planoAtendimentoFamiliar.page.pageable.page + 1 }} de {{ totalPagesPlanoAtendimentoFamiliar }}
 						<md-button class="md-icon-button" ng-disabled="(model.planoAtendimentoFamiliar.page.pageable.page + 1) < 2" ng-click="onFamiliaPaginationChange(false)">
 							<i style="font-size: 20px;" class="zmdi zmdi-chevron-left" ng-style="(model.planoAtendimentoFamiliar.page.pageable.page + 1) < 2 && {'color': '#BEBEBE'} || ''"></i>
 						</md-button>
