--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -28,7 +28,7 @@
 		<script type="text/javascript" th:src="@{/modules/home/controllers/crianca/crianca-controller.js}"></script>
 		
 <!-- 		Plano de atendimento familiar -->
-<!-- 		<script type="text/javascript" th:src="@{/modules/home/controllers/planoatendimentofamiliar/popup/selecionar-familia-controller-popup.js}"></script> -->
+		<script type="text/javascript" th:src="@{/modules/home/controllers/planoatendimentofamiliar/popup/adicionar-encaminhamento-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/planoatendimentofamiliar/plano-atendimento-familiar-controller.js}"></script>
 		
 		<!-- maskMoney -->
