--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/planoatendimentofamiliar/plano-atendimento-familiar-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/planoatendimentofamiliar/plano-atendimento-familiar-form.html
@@ -109,7 +109,7 @@
 									
 										<md-input-container layout="column" flex="30" style="margin: 30px 0px 20px 30px">
 									        <label>Tipo de encaminhamento</label>
-									        <md-select name="tipoEncaminhamento" required ng-model="model.encaminhamento.tipo" ng-change="listEncaminhamentosByTipo()">
+									        <md-select name="tipoEncaminhamento" required ng-model="model.encaminhamento.tipo" ng-change="encaminhamentoHandler()">
 									          <md-option ng-repeat="tipoEncaminhamento in allTiposEncaminhamento track by $index" value="{{tipoEncaminhamento}}">{{::tipoEncaminhamento | translate}}</md-option>
 									        </md-select>
 									    </md-input-container>
@@ -141,6 +141,7 @@
 													 			<th md-column md-order-by="nameToLower"><span>Número</span></th>
 																<th md-column md-numeric ><span>Descrição</span></th>
 																<th md-column md-numeric ><span>Data Limite</span></th>
+																<th md-column md-numeric ><span>Status</span></th>
 													     		</tr>
 													    	</thead>
 													     	<tbody md-body>
@@ -148,6 +149,7 @@
 														        	<td md-cell>{{::encaminhamento.id}}</td>
 														        	<td md-cell>{{::encaminhamento.descricao}}</td>
 														        	<td md-cell>{{::encaminhamento.dataFinal | date : format : timezone}}</td>
+														        	<td md-cell>{{::encaminhamento.status | translate}}</td>
 													      		</tr>
 													     	</tbody>
 													  	</table>
@@ -180,53 +182,60 @@
 						                    
 						                </md-expansion-panel>
 						                
-						                <md-expansion-panel md-component-id="paperFodaci">
+						                <md-expansion-panel md-component-id="paperParecer">
 						                    <md-expansion-panel-collapsed>
-						                        <div class="md-title" style="max-width:100%">Encaminhamentos {{::tipoEncaminhamento | translate}}</div>
+						                        <div class="md-title" style="max-width:100%">Parecer {{::tipoEncaminhamento | translate}}</div>
 						                        <md-expansion-panel-icon></md-expansion-panel-icon>
 						                    </md-expansion-panel-collapsed>
 						                    
 						                    <md-expansion-panel-expanded>
-												<md-expansion-panel-header>Encaminhamentos {{::tipoEncaminhamento | translate}}</md-expansion-panel-header>
+												<md-expansion-panel-header>Parecer {{::tipoEncaminhamento | translate}}</md-expansion-panel-header>
 												
 												<md-expansion-panel-content>
-													
-<!-- 													<div md-theme="default" layout="row" layout-align="end center" class="default-header md-primary md-hue-3"> -->
-<!-- 												        <md-button class="md-raised md-accent default-save-button" ng-click="changetToEmExecucao()">Novo encaminhamento</md-button> -->
-<!-- 											        </div> -->
-													
-													<md-table-container>
-														<table md-table md-row-select multiple md-progress="promise">
-															<thead md-head md-order="query.order" md-on-reorder="getDesserts">
-																<tr md-row>
-													 			<th md-column md-order-by="nameToLower"><span>Nome</span></th>
-																<th md-column md-numeric ><span>Data de nascimento</span></th>
-													     		</tr>
-													    	</thead>
-													     	<tbody md-body>
-													      		<tr md-row md-select="dessert" ng-repeat="integrante in model.integranteFamiliar.page.content">
-													        	<td md-cell>{{::integrante.nome}}</td>
-													        	<td md-cell>{{::integrante.dataNascimento | date : format : timezone}}</td>
-													      		</tr>
-													     	</tbody>
-													  	</table>
-													</md-table-container>
-											        
-											        <div layout="column" flex class="empty-grid" layout-align="center center" ng-if="model.integranteFamiliar.page.content.length == 0">
-														Essa família não possui nenhum integrante familia
-													</div>
-													
-													<md-divider></md-divider>
-													<div class="default-paginator" layout layout-align="end center" ng-if="model.integranteFamiliar.page.content.length > 0">
-														{{ model.integranteFamiliar.page.pageable.page + 1 }} de {{ totalPagesIntegrante }}
-														<md-button class="md-icon-button" ng-disabled="(model.integranteFamiliar.page.pageable.page + 1) < 2" ng-click="onIntegrantePaginationChange(false)">
-															<i style="font-size: 20px;" class="zmdi zmdi-chevron-left" ng-style="(model.integranteFamiliar.page.pageable.page + 1) < 2 && {'color': '#BEBEBE'} || ''"></i>
-														</md-button>
-														<md-button class="md-icon-button" ng-disabled="(model.integranteFamiliar.page.pageable.page + 1) >= totalPagesIntegrante" ng-click="onIntegrantePaginationChange(true)">
-															<i style="font-size: 20px;" class="zmdi zmdi-chevron-right" ng-style="(model.integranteFamiliar.page.pageable.page + 1) >= Math.ceil(model.integranteFamiliar.page.total/model.familia.page.pageable.size) && {'color': '#BEBEBE'} || ''"></i>
-														</md-button>
-											  		</div>
-													
+												
+<!-- 												COMEÇA AQUI -->
+													<div >
+<!-- 														<md-toolbar layout="column"> -->
+															<div ng-if="model.comentario.loading" layout="row" layout-align="center center">
+													    		<md-progress-circular class="md-hue-2" md-mode="indeterminate"></md-progress-circular>
+												    		</div>
+												    	
+															<div layout="column" flex class="empty-grid" layout-align="center center" ng-if="!model.parecer.list.length">
+																Nenhum comentário
+															</div>
+								
+															<md-content ng-if="model.parecer.list.length " style="height:352px; " id="pareceres">
+															    <md-list style="padding: 0px;">
+															      <md-list-item class="md-3-line comentario" ng-class="{'last-comment': $last}" ng-repeat="parecer in model.parecer.list">
+															        <div class="md-list-item-text">
+															        	<div ng-class="{'my-comment' : comentario.usuario.nome == user.principal.nome}">
+															        		<h3 style="font-size:14px; font-weight:bold">{{::parecer.usuario.nome}}</h3>
+																	        <h4>{{::parecer.created | date:'dd/MM/yyyy'}} às {{::comentario.created.toTimeString().substring(0,5)}}h <i class="zmdi zmdi-accounts" style="font-size: 20px; margin-left: 10px; cursor: pointer" ng-click="openParticipanteComentarioHandler(comentario)"></i></h4> 
+																	        <p style="word-break:break-all">{{::parecer.descricao}}</p>
+															        	</div>
+															        </div>
+															      </md-list-item>
+															    </md-list>
+													        </md-content>
+													        
+													        <md-divider ></md-divider>
+													        
+													        <div class="default-frame" style="padding-top: 20px; margin-bottom: 0px;" md-theme="{{::miscellaneous}}">
+													        	<form name="model.comentario.form" layout="row" layout-align="end center">
+															    	<md-input-container flex layout="column">
+																        <label>Digite seu comentário</label>
+																        <input ng-model="model.parecer.entity.descricao" columns="1" class="break remove-cross" maxlength="244" />
+																    </md-input-container>
+																    
+																    <div layout-align="end center">
+																	    <md-button class="md-raised md-accent default-save-button " ng-click="insertParecer()">Enviar</md-button>
+																    </div>
+											        			</form>
+											        		</div>
+											        		
+<!-- 														</md-toolbar> -->
+													</div>		
+<!-- 													TERMINA AQUI											 -->
 												</md-expansion-panel-content>
 												
 												<md-expansion-panel-footer>
