--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/menu-sidenav.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/menu-sidenav.html
@@ -16,6 +16,12 @@
 			<label class="md-body-2">MENU</label>
 			
 			<md-button style="text-align: left;"
+				ng-click="toggleMenuSideNavHandler('user.list');">
+				<md-icon class="zmdi zmdi-accounts zmdi-hc-fw zmdi-hc-2x"></md-icon>
+				Usuários
+			</md-button>
+			
+			<md-button style="text-align: left;"
 				ng-click="toggleMenuSideNavHandler('familia.list');">
 				<md-icon class="zmdi zmdi-accounts zmdi-hc-fw zmdi-hc-2x"></md-icon>
 				Família
