--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/index.html
@@ -31,6 +31,8 @@
 		<script type="text/javascript" th:src="@{/modules/home/controllers/planoatendimentofamiliar/popup/adicionar-encaminhamento-controller-popup.js}"></script>
 		<script type="text/javascript" th:src="@{/modules/home/controllers/planoatendimentofamiliar/plano-atendimento-familiar-controller.js}"></script>
 		
+		<script type="text/javascript" th:src="@{/modules/home/controllers/user/user-controller.js}"></script>
+		
 		<!-- maskMoney -->
 		<script type="text/javascript" th:src="@{/static/js/jquery.maskMoney.js}"></script>
 		<script type="text/javascript" th:src="@{/static/js/angular.maskMoney.js}"></script>
