--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/planoatendimentofamiliar/plano-atendimento-familiar-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/planoatendimentofamiliar/plano-atendimento-familiar-form.html
@@ -104,7 +104,7 @@
 					
 <!-- 					TAB INTEGRANTE FAMILIAR -->
 					
-					<md-tab label="Encaminhamentos" ng-if="model.planoAtendimentoFamiliar.entity.status != 'RASCUNHO'">
+					<md-tab label="Encaminhamentos" ng-if="model.planoAtendimentoFamiliar.entity.status != 'RASCUNHO' && model.planoAtendimentoFamiliar.entity.id">
 						<div layout-fill style="height:50%">
 				    		<md-toolbar layout-fill style="min-height: 100% !important;position:absolute;" class="md-hue-3" md-theme="{{osmTheme}}">
 								<div class="default-frame" style="overflow:auto">
