--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/user/user-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/user/user-form.html
@@ -1,7 +1,87 @@
 <!DOCTYPE html>
 <html xmlns:ng="http://angularjs.org" 
 	xmlns:th="http://www.thymeleaf.org" lang="pt">
+	
+<div class="main-div" >
+	
+		<md-toolbar layout="row" style="z-index: 3;">
+	    	<div flex layout="row" class="default-header">
+		        <h1 class="md-toolbar-tools">Usuário</h1>
+	    	</div>
+	    	
+	        <div md-theme="default" layout="row" layout-align="end center" ng-if="model.familia.entity.ativo || !model.familia.entity.id" class="default-header md-primary md-hue-3">
+		        <md-button class="md-raised md-accent default-save-button" ng-click="insertUser()">Salvar</md-button>
+	        </div>
+	        
+	         <div md-theme="default" layout="row" layout-align="end center" class="default-header">
+		        <md-button class="md-raised md-accent default-save-button" ng-click="$state.go(USER_LIST_STATE)">Voltar</md-button>
+	        </div>
+	        
+	        <div ng-if="model.familia.entity.ativo == true" md-theme="default" layout="row" layout-align="end center" class="default-header">
+		        <md-button class="md-raised md-accent default-save-button" ng-click="changeToRemove()">Excluir</md-button>
+	        </div>
+	        
+	        <div ng-if="model.familia.entity.ativo == false" md-theme="default" layout="row" layout-align="end center" class="default-header">
+		        <md-button class="md-raised md-accent default-save-button" ng-click="enableFamilia()">Ativar registro</md-button>
+	        </div>
+	        
+	    </md-toolbar>
+		
+		<div layout="column" md-theme="{{}}" style="height: 100%; position:absolute; width:100%;">
+			<md-content layout="column" style="height: 93%;">
+				<md-tabs md-border-bottom style="position: static; overflow:auto" md-selected="model.ordemServico.selectedTab">
+					<md-tab label="Usuário">
+						
+						<div layout-fill style="height:50%">
+				    		<md-toolbar layout-fill style="min-height: 100% !important;position:absolute;" class="md-hue-3" md-theme="{{osmTheme}}">
+								<div class="default-frame" style="overflow:auto">
+									<md-toolbar layout="row" class="default-form toolbar-temp" style="padding-bottom: 0; ">
+										<form novalidate name="model.user.form" class="default-form">
+											
+											<md-input-container layout="column" flex="30" style="margin-right:30px">
+										        <label>Tipo de usuário</label>
+										        <md-select name="role" required ng-model="model.user.entity.role">
+										          <md-option ng-repeat="role in allUserRoles" value="{{role}}">{{::role | translate}}</md-option>
+										        </md-select>
+										        
+										        <div ng-messages="model.user.form.usuario.$error">
+								                	<div ng-message="required" ng-if="model.user.form.$submitted">Campo obrigatório</div>
+								                </div>
+										    </md-input-container>
+											
+											<md-input-container layout="column" flex="30" ">
+									    		<label>Nome</label>
+								                <input md-maxlength="50" name="name" required ng-model="model.user.entity.name">
+								
+								                <div ng-messages="model.user.form.name.$error">
+								                	<div ng-message="required" ng-if="model.user.form.$submitted">Campo obrigatório</div>
+								                	<div ng-message="md-maxlength" ng-if="model.user.form.$submitted">Limite de caracteres excedido</div>
+								                </div>
+								            </md-input-container>
+											
+											<md-input-container layout="column" flex="30" ">
+									    		<label>Email</label>
+								                <input type="email" md-maxlength="144" name="email" required ng-model="model.user.entity.email">
+								
+								                <div ng-messages="model.user.form.email.$error">
+								                	<div ng-message="required" ng-if="model.user.form.$submitted">Campo obrigatório</div>
+								                	<div ng-message="md-maxlength" ng-if="model.user.form.$submitted">Limite de caracteres excedido</div>
+								                	<div ng-message="email" ng-if="model.user.form.$submitted">Email inválido</div>
+								                </div>
+								            </md-input-container>
+								            
+										</form>
+									</md-toolbar>
+								</div>
+							</md-toolbar>
+						</div>
+						
+					</md-tab>
+					
+				</md-tabs>
+			</md-content>
+		</div>
+		
+</div>
 
-	<eits-vbox vertical-align="center" horizontal-align="center">
-	</eits-vbox>
 </html>
