Alterando senha do usuário

--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/user/user-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/user/user-form.html
@@ -9,7 +9,7 @@
 		        <h1 class="md-toolbar-tools">Usuário</h1>
 	    	</div>
 	    	
-	        <div md-theme="default" layout="row" layout-align="end center" ng-if="model.familia.entity.ativo || !model.familia.entity.id" class="default-header md-primary md-hue-3">
+	        <div md-theme="default" layout="row" layout-align="end center" ng-if="model.user.entity.enabled || !model.user.entity.id" class="default-header md-primary md-hue-3">
 		        <md-button class="md-raised md-accent default-save-button" ng-click="insertUser()">Salvar</md-button>
 	        </div>
 	        
@@ -17,12 +17,16 @@
 		        <md-button class="md-raised md-accent default-save-button" ng-click="$state.go(USER_LIST_STATE)">Voltar</md-button>
 	        </div>
 	        
-	        <div ng-if="model.familia.entity.ativo == true" md-theme="default" layout="row" layout-align="end center" class="default-header">
+	        <div ng-if="model.user.entity.enabled == true" md-theme="default" layout="row" layout-align="end center" class="default-header">
 		        <md-button class="md-raised md-accent default-save-button" ng-click="changeToRemove()">Excluir</md-button>
 	        </div>
 	        
 	        <div ng-if="model.familia.entity.ativo == false" md-theme="default" layout="row" layout-align="end center" class="default-header">
 		        <md-button class="md-raised md-accent default-save-button" ng-click="enableFamilia()">Ativar registro</md-button>
+	        </div>
+	        
+	        <div md-theme="default" layout="row" layout-align="end center" ng-if="model.user.entity.enabled || !model.user.entity.id" class="default-header md-primary md-hue-3">
+		        <md-button class="md-raised md-accent default-save-button" ng-click="openChangePasswordHandler(model.user.entity.id)">Alterar Senha</md-button>
 	        </div>
 	        
 	    </md-toolbar>
