--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/planoatendimentofamiliar/plano-atendimento-familiar-list.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/planoatendimentofamiliar/plano-atendimento-familiar-list.html
@@ -81,7 +81,7 @@
 						<md-button class="md-icon-button" ng-disabled="(model.planoAtendimentoFamiliar.page.pageable.page + 1) < 2" ng-click="onPlanoPaginationChange(false)">
 							<i style="font-size: 20px;" class="zmdi zmdi-chevron-left" ng-style="(model.planoAtendimentoFamiliar.page.pageable.page + 1) < 2 && {'color': '#BEBEBE'} || ''"></i>
 						</md-button>
-						<md-button class="md-icon-button" ng-disabled="(model.planoAtendimentoFamiliar.page.pageable.page + 1) >= totalPagesFamilia" ng-click="onPlanoPaginationChange(true)">
+						<md-button class="md-icon-button" ng-disabled="(model.planoAtendimentoFamiliar.page.pageable.page + 1) >= totalPagesPlanoAtendimentoFamiliar" ng-click="onPlanoPaginationChange(true)">
 							<i style="font-size: 20px;" class="zmdi zmdi-chevron-right" ng-style="(model.planoAtendimentoFamiliar.page.pageable.page + 1) >= Math.ceil(model.planoAtendimentoFamiliar.page.total/model.planoAtendimentoFamiliar.page.pageable.size) && {'color': '#BEBEBE'} || ''"></i>
 						</md-button>
 			  		</div>
