--- a/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/user/user-form.html
+++ b/4-Implementacao/4.1-Codigo_Fonte/GRACA/src/main/resources/META-INF/resources/modules/home/views/user/user-form.html
@@ -44,7 +44,7 @@
 											
 											<md-input-container layout="column" flex="30" style="margin-right:30px">
 										        <label>Tipo de usuário</label>
-										        <md-select name="role" required ng-model="model.user.entity.role">
+										        <md-select name="role" ng-disabled="!model.user.entity.enabled" required ng-model="model.user.entity.role">
 										          <md-option ng-repeat="role in allUserRoles" value="{{role}}">{{::role | translate}}</md-option>
 										        </md-select>
 										        
@@ -55,7 +55,7 @@
 											
 											<md-input-container layout="column" flex="30" ">
 									    		<label>Nome</label>
-								                <input maxlength="50" md-maxlength="50" name="name" required ng-model="model.user.entity.name">
+								                <input maxlength="50" ng-disabled="!model.user.entity.enabled" md-maxlength="50" name="name" required ng-model="model.user.entity.name">
 								
 								                <div ng-messages="model.user.form.name.$error">
 								                	<div ng-message="required" ng-if="model.user.form.$submitted">Campo obrigatório</div>
@@ -65,7 +65,7 @@
 											
 											<md-input-container layout="column" flex="30" ">
 									    		<label>Email</label>
-								                <input type="email" maxlength="144" md-maxlength="144" name="email" required ng-model="model.user.entity.email">
+								                <input type="email" ng-disabled="!model.user.entity.enabled" maxlength="144" md-maxlength="144" name="email" required ng-model="model.user.entity.email">
 								
 								                <div ng-messages="model.user.form.email.$error">
 								                	<div ng-message="required" ng-if="model.user.form.$submitted">Campo obrigatório</div>
@@ -76,7 +76,7 @@
 								            
 								            <md-input-container ng-if="model.user.entity.role == 'COLABORADOR_EXTERNO' " layout="column" flex="30" style="margin-right:30px">
 										        <label>Rede de Apoio</label>
-										        <md-select name="redeApoio" required ng-model="model.user.entity.redeApoio">
+										        <md-select name="redeApoio" ng-disabled="!model.user.entity.enabled" required ng-model="model.user.entity.redeApoio">
 										          <md-option ng-repeat="rede in allRedeApoio" value="{{rede}}">{{rede.nome}}</md-option>
 										        </md-select>
 										        
